@@ -302,7 +302,7 @@ FXbool fxsaveJPG(FXStream& store,const FXColor* data,FXint width,FXint height,FX
   if(!data || width<=0 || height<=0 || quality<=0 || 100<quality) return FALSE;
 
   // Row buffer
-  if(!FXMALLOC(&buffer,JSAMPLE,width*3)) return FALSE;
+  if(!FXMALLOC(&buffer[0],JSAMPLE,width*3)) return FALSE;
 
   // Specify the error manager
   memset(&dstinfo,0,sizeof(dstinfo));
