@@ -189,6 +189,8 @@ R *** Issued snapshot 4
 + Added QThread::processorAffinity() and setProcessorAffinity()
 * Added some ambiguity busters for when including fx.h and misc headers.
 Changed None to NoEncryption for QSSLKey and QSSLPKey
+* Added GCC 4.1 compatibility, specifically a number of aliasing constructs
+were made safe and warnings fixed
 
 
 v0.85 13th Feb 2005:
